# garden_monitor

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py
collect/: admin.py  grovepi.py  models.py  probes.py  tasks.py  urls.py  utils.py  views.py
collect/management/commands/: check_encoder_limits.py  get_commands.py  measure.py  read_encoder.py  relay.py  send_plot.py
collect/migrations/: 0001_initial.py  0002_auto_20190909_2032.py  0003_auto_20190909_2048.py  0004_sensor_plot_y_axis_label.py  0005_relay.py  0006_auto_20190930_1932.py  0007_auto_20190930_2034.py  0008_auto_20200613_1904.py  0009_plotfile.py  0010_auto_20200614_1614.py  0011_plotfile_sensor.py
collect/templates/: measures.html  plot_email.html
measure/: __init__.py  asgi.py  celery_apps.py  manage.py  settings.py  urls.py  wsgi.py
