[metadata]
name = garden_monitor
summary = The garden_monitor
author = Stephane Poss
author-email = stephposs@gmail.com
url = "https://"
description-file = README.rst
license = MIT
classifier =
	Intended Audience :: Developers
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
keywords = grovepi, moisture sensor, raspberrypi

[files]
packages =
  collect
  measure